lib/crates/fabro-llm/tests/it/wire/snapshots/it__wire__gemini__custom_named_http_error_identity.snap
---
source: lib/crates/fabro-llm/tests/it/wire/gemini.rs
expression: rendered
---
{
  "error": "Server error from gemini-proxy: backend exploded",
  "retryable": true,
  "failover_eligible": true
}
