lib/crates/fabro-llm/tests/it/wire/snapshots/it__wire__gemini__decode_function_call_with_thought_signature.snap
---
source: lib/crates/fabro-llm/tests/it/wire/gemini.rs
expression: rendered
---
{
  "id": "[UUID]",
  "model": "gemini-test",
  "provider": "gemini",
  "message": {
    "role": "assistant",
    "content": [
      {
        "kind": "text",
        "data": "Let me search."
      },
      {
        "kind": "tool_call",
        "data": {
          "id": "[UUID]",
          "name": "search",
          "type": "function",
          "arguments": {
            "query": "foo"
          },
          "raw_arguments": null,
          "provider_metadata": {
            "thoughtSignature": "sig_gemini_xyz"
          }
        }
      }
    ]
  },
  "finish_reason": "tool_calls",
  "usage": {
    "input_tokens": 30,
    "output_tokens": 12,
    "reasoning_tokens": 0,
    "cache_read_tokens": 0,
    "cache_write_tokens": 0
  },
  "raw": {
    "candidates": [
      {
        "content": {
          "role": "model",
          "parts": [
            {
              "text": "Let me search."
            },
            {
              "functionCall": {
                "name": "search",
                "args": {
                  "query": "foo"
                }
              },
              "thoughtSignature": "sig_gemini_xyz"
            }
          ]
        },
        "finishReason": "STOP"
      }
    ],
    "usageMetadata": {
      "promptTokenCount": 30,
      "candidatesTokenCount": 12
    }
  },
  "warnings": [],
  "rate_limit": null
}
