lib/crates/fabro-llm/tests/it/wire/snapshots/it__wire__gemini__decode_thought_parts.snap
---
source: lib/crates/fabro-llm/tests/it/wire/gemini.rs
expression: rendered
---
{
  "id": "[UUID]",
  "model": "gemini-test",
  "provider": "gemini",
  "message": {
    "role": "assistant",
    "content": [
      {
        "kind": "thinking",
        "data": {
          "text": "Adding the numbers.",
          "signature": null,
          "redacted": false
        }
      },
      {
        "kind": "text",
        "data": "4."
      }
    ]
  },
  "finish_reason": "stop",
  "usage": {
    "input_tokens": 25,
    "output_tokens": 40,
    "reasoning_tokens": 0,
    "cache_read_tokens": 0,
    "cache_write_tokens": 0
  },
  "raw": {
    "candidates": [
      {
        "content": {
          "role": "model",
          "parts": [
            {
              "text": "Adding the numbers.",
              "thought": true
            },
            {
              "text": "4."
            }
          ]
        },
        "finishReason": "STOP"
      }
    ],
    "usageMetadata": {
      "promptTokenCount": 25,
      "candidatesTokenCount": 40
    }
  },
  "warnings": [],
  "rate_limit": null
}
