lib/crates/fabro-llm/tests/it/wire/snapshots/it__wire__gemini__encode_provider_options_can_override_safety_settings.snap
---
source: lib/crates/fabro-llm/tests/it/wire/gemini.rs
expression: rendered
---
{
  "contents": [
    {
      "role": "user",
      "parts": [
        {
          "text": "Hello"
        }
      ]
    }
  ],
  "generationConfig": {
    "maxOutputTokens": 128
  },
  "safety_settings": []
}
